crates/au-cli/tests/it/snapshots/it__scenarios__missing-required-field.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "required-field-absent",
      "message": "instance is missing required field 'description' (declared on 'note')",
      "related": [
        {
          "file": "<root>/scenarios/missing-required-field/type/note.type.yaml",
          "line_col": {
            "end": {
              "col": 14,
              "line": 2
            },
            "start": {
              "col": 3,
              "line": 2
            }
          },
          "range": {
            "end": 21,
            "start": 10
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/missing-required-field/no-description.md",
        "line_col": {
          "end": {
            "col": 11,
            "line": 2
          },
          "start": {
            "col": 7,
            "line": 2
          }
        },
        "range": {
          "end": 14,
          "start": 10
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 28,
                        "line_col": {
                          "end": {
                            "col": 29,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/missing-required-field/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "missing-required-field"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "missing-required-field"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/missing-required-field/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 42,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 6
                },
                "start": {
                  "col": 1,
                  "line": 5
                }
              },
              "start": 20
            },
            "text": "Missing description"
          },
          {
            "content": "note",
            "kind": "inline_code",
            "span": {
              "end": 70,
              "line_col": {
                "end": {
                  "col": 28,
                  "line": 7
                },
                "start": {
                  "col": 22,
                  "line": 7
                }
              },
              "start": 64
            }
          },
          {
            "content": "description",
            "kind": "inline_code",
            "span": {
              "end": 107,
              "line_col": {
                "end": {
                  "col": 65,
                  "line": 7
                },
                "start": {
                  "col": 52,
                  "line": 7
                }
              },
              "start": 94
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/missing-required-field/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [],
        "file": "<root>/scenarios/missing-required-field/no-description.md",
        "section_presence": null
      }
    ]
  }
}
