crates/au-cli/tests/it/snapshots/it__scenarios__mixin-auto-unify.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 22,
                        "line_col": {
                          "end": {
                            "col": 23,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/mixin-auto-unify/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "mixin-auto-unify"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "mixin-auto-unify"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/mixin-auto-unify/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 108,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 89
            },
            "text": "A mixin instance"
          },
          {
            "content": "note",
            "kind": "inline_code",
            "span": {
              "end": 130,
              "line_col": {
                "end": {
                  "col": 22,
                  "line": 11
                },
                "start": {
                  "col": 16,
                  "line": 11
                }
              },
              "start": 124
            }
          },
          {
            "content": "deliverable",
            "kind": "inline_code",
            "span": {
              "end": 150,
              "line_col": {
                "end": {
                  "col": 42,
                  "line": 11
                },
                "start": {
                  "col": 29,
                  "line": 11
                }
              },
              "start": 137
            }
          },
          {
            "content": "description: String",
            "kind": "inline_code",
            "span": {
              "end": 186,
              "line_col": {
                "end": {
                  "col": 78,
                  "line": 11
                },
                "start": {
                  "col": 57,
                  "line": 11
                }
              },
              "start": 165
            }
          },
          {
            "content": "origins: [note, deliverable]",
            "kind": "inline_code",
            "span": {
              "end": 293,
              "line_col": {
                "end": {
                  "col": 92,
                  "line": 12
                },
                "start": {
                  "col": 62,
                  "line": 12
                }
              },
              "start": 263
            }
          }
        ],
        "claim": [
          "note",
          "deliverable"
        ],
        "closure": [
          "deliverable",
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "audience",
            "origins": [
              {
                "name": "deliverable",
                "origin_path": "<root>/scenarios/mixin-auto-unify/type/deliverable.type.yaml",
                "required": true,
                "shape": "[internal, external]"
              }
            ],
            "required": true,
            "shape": "[internal, external]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "deliverable",
                "origin_path": "<root>/scenarios/mixin-auto-unify/type/deliverable.type.yaml",
                "required": true,
                "shape": "String"
              },
              {
                "name": "note",
                "origin_path": "<root>/scenarios/mixin-auto-unify/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 83,
                        "line_col": {
                          "end": {
                            "col": 19,
                            "line": 6
                          },
                          "start": {
                            "col": 11,
                            "line": 6
                          }
                        },
                        "start": 75
                      },
                      "file": "<root>/scenarios/mixin-auto-unify/migration-plan.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "external"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "external"
                }
              }
            ],
            "field": "audience"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 64,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 5
                          },
                          "start": {
                            "col": 14,
                            "line": 5
                          }
                        },
                        "start": 48
                      },
                      "file": "<root>/scenarios/mixin-auto-unify/migration-plan.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migration plan"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migration plan"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/mixin-auto-unify/migration-plan.md",
        "section_presence": null
      }
    ]
  }
}
